# Sphere

./: .gitignore  Makefile  README.md  demo.sh  pyproject.toml
demo/sample-project/: app.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  evidence.js  fixplan.js  main.jsx  styles.css  topology.js
frontend/test/: evidence.test.js  fixplan.test.js  topology.test.js
sphere/: __init__.py  apply.py  diagnose.py  fixplan.py  introspect.py  requirements.py  serve.py
tests/: test_apply.py  test_diagnose.py  test_evidence.py  test_fixplan.py
