[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sphere"
version = "0.1.0"
description = "Machine-level Python topology introspection"
requires-python = ">=3.11"
dependencies = [
    "packaging>=24",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
sphere = "sphere.serve:main"

[tool.setuptools]
packages = ["sphere"]

[tool.setuptools.package-data]
sphere = ["web/dist/**"]
